Bug 540247. If we change the size of the scrolled frame for a XUL scroll make sure to invalidate the changed area. r=roc