layout/generic/nsGfxScrollFrame.cpp
@@ -2497,6 +2497,9 @@ nsXULScrollFrame::LayoutScrollArea(nsBoxLayoutState& aState,
                             mInner.mScrollPort.Size());
   PRInt32 flags = NS_FRAME_NO_MOVE_VIEW;
 
+  nsRect originalRect = mInner.mScrolledFrame->GetRect();
+  nsRect originalOverflow = mInner.mScrolledFrame->GetOverflowRect();
+
   nsSize minSize = mInner.mScrolledFrame->GetMinSize(aState);
   
   if (minSize.height > childRect.height)
@@ -2521,6 +2524,28 @@ nsXULScrollFrame::LayoutScrollArea(nsBoxLayoutState& aState,
     // because we've already accounted for it
     mInner.mScrolledFrame->SetBounds(aState, childRect);
     mInner.mScrolledFrame->ClearOverflowRect();
+  }
+
+  nsRect finalRect = mInner.mScrolledFrame->GetRect();
+  nsRect finalOverflow = mInner.mScrolledFrame->GetOverflowRect();
+  // The position of the scrolled frame shouldn't change, but if it does or
+  // the position of the overflow rect changes just invalidate both the old
+  // and new overflow rect.
+  if (originalRect.TopLeft() != finalRect.TopLeft() ||
+      originalOverflow.TopLeft() != finalOverflow.TopLeft())
+  {
+    // The old overflow rect needs to be adjusted if the frame's position
+    // changed.
+    mInner.mScrolledFrame->Invalidate(
+      originalOverflow + originalRect.TopLeft() - finalRect.TopLeft());
+    mInner.mScrolledFrame->Invalidate(finalOverflow);
+  } else if (!originalOverflow.IsExactEqual(finalOverflow)) {
+    // If the overflow rect changed then invalidate the difference between the
+    // old and new overflow rects.
+    mInner.mScrolledFrame->CheckInvalidateSizeChange(
+      originalRect, originalOverflow, finalRect.Size());
+    mInner.mScrolledFrame->InvalidateRectDifference(
+      originalOverflow, finalOverflow);
   }
 
   aState.SetLayoutFlags(oldflags);
